[package]
name = "haydos"
version = "0.1.0"
edition = "2021"
authors = ["Hayden Rinn <hayden@haydenrinn.com>"]

[dependencies]
limine = "0.1"
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
cfg-if = "1"
x86_64_impl = { package = "x86_64", version = "0.14" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
